@@ -20,15 +20,6 @@ class ExecuteProcedureTestSqlserver < ActiveRecord::TestCase
     assert_equal 'TABLE', table_info[:TABLE_TYPE], "Table Info: #{table_info.inspect}"
   end
   
-  should 'quote bind vars correctly' do
-    assert_sql(/EXEC sp_tables '%sql_server%', NULL, NULL, NULL, 1/) do
-      @klass.execute_procedure :sp_tables, '%sql_server%', nil, nil, nil, true
-    end if sqlserver_2005? || sqlserver_2008?
-    assert_sql(/EXEC sp_tables '%sql_server%', NULL, NULL, NULL/) do
-      @klass.execute_procedure :sp_tables, '%sql_server%', nil, nil, nil
-    end if sqlserver_2000?
-  end
-  
   should 'allow multiple result sets to be returned' do
     results1, results2 = @klass.execute_procedure('sp_helpconstraint','accounts')
     assert_instance_of Array, results1
