@@ -1,6 +1,9 @@
 
 MASTER
 
+* Include new raw connection interfaces developed and optimized under the 3.0 branch.
+
+
 * 2.3.9
 
 * The remove_column conforms to ArgumentError exceptions. [Ken Collins]
